--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="guest-div">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <p class="score" id="guest-score">0</p>
                 <div class="btn-wrapper">
                     <button onclick="guestAdd1()">+1</button>
